k8s-nginx/prod-deploy-1-1-0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-svc
  namespace: hello-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-svc
  template:
    metadata:
      labels:
        app: hello-svc
    spec:
      containers:
      - name: hello-svc
        image: hashicorp/http-echo
        args:
          - "-text=hello 1-1-0"
