k8s-nginx/prod-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-svc
  namespace: hello-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-svc
  template:
    metadata:
      labels:
        app: hello-svc
    spec:
      containers:
      - name: hello-svc
        image: hashicorp/http-echo
        args:
          - "-text=hello 1-0-0"

---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: hello-prod
  labels:
    app: hello-svc
spec:
  ports:
  - port: 80
    targetPort: 5678
    protocol: TCP
    name: http
  selector:
    app: hello-svc
